# dialob-api/src/main/resources/swagger.yaml
@@ -1143,7 +1143,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/ValueSet'
+              $ref: '#/definitions/FormValueSet'
         '403':
           description: Access denied
           schema:
@@ -1178,7 +1178,7 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/ValueSet'
+            $ref: '#/definitions/FormValueSet'
         '403':
           description: Access denied
           schema:
@@ -1265,7 +1265,7 @@ definitions:
       value:
         type: object
     title: ContextValue
-  Entry:
+  FormValueSetEntry:
     type: object
     required:
       - id
@@ -1352,7 +1352,7 @@ definitions:
       valueSets:
         type: array
         items:
-          $ref: '#/definitions/ValueSet'
+          $ref: '#/definitions/FormValueSet'
       variables:
         type: array
         items:
@@ -1706,6 +1706,28 @@ definitions:
       rule:
         type: string
     title: Validation
+  FormValueSet:
+    type: object
+    required:
+      - id
+    properties:
+      entries:
+        type: array
+        items:
+          $ref: '#/definitions/FormValueSetEntry'
+      id:
+        type: string
+    title: FormValueSet
+  ValueSetEntry:
+    type: object
+    required:
+      - key
+    properties:
+      key:
+        type: string
+      value:
+        type: string
+    title: ValueSetEntry
   ValueSet:
     type: object
     required:
@@ -1714,7 +1736,7 @@ definitions:
       entries:
         type: array
         items:
-          $ref: '#/definitions/Entry'
+          $ref: '#/definitions/ValueSetEntry'
       id:
         type: string
     title: ValueSet
